...
            android:layout_height="wrap_content"
            android:text="ชื่ออาหาร : "
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/default_name_food"
            android:inputType="text"
            android:textAlignment="center" />

...
            android:layout_height="wrap_content"
            android:text="ราคา : "
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cost"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_currency"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/currency"
            android:inputType="text"
            android:textAlignment="center" />
...
            android:layout_height="12dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/ic_divide_32dp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="1"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_unit"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="จาน"
            android:inputType="text"
            android:textAlignment="center" />
...
            android:gravity="center"
            android:text="@string/description"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.6"
...
