<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kmitl.it13.millibear.eatallday.controller.activity.RandomRoomActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <include layout="@layout/sub_action_bar"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8C8C8C"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_weight="2.9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_random_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_random_now"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
